# VideoDataset

./: .buildinfo  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  .renovaterc.json  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.html  conanfile.py  genindex.html  index.html  limitation.html  objects.inv  profile.sh  profiler.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  spawn.py  test.py
.doctrees/: benchmark.doctree  environment.pickle  index.doctree  limitation.doctree  quickstart.doctree
.doctrees/api/: index.doctree
.doctrees/reports/: index.doctree
.doctrees/reports/coverage/: index.doctree
.doctrees/reports/mypy/: index.doctree
.github/workflows/: ci.yml  pages.yml  reuseable_cibuildwheel.yml  semantic-release.yml
.gitlab/workflows/: ci.yml  commitlint.yml  release.yml  renovate.yml  semantic-release.yml
_modules/: index.html
_modules/videodataset/dataset/: base_dataset.html
_sources/: index.md.txt  quickstart.md.txt
_static/: documentation_options.js
api/: index.html
cmake/: ProjectOptions.cmake
cmake/hooks/: hook_rewrite_url.py
csrc/: CMakeLists.txt  profile.cpp
csrc/include/: _core.hpp  circular_buffer.hpp  tensor_segment.hpp
csrc/src/: _core.cpp  tensor_segment.cpp  video_decoder.cpp
csrc/tests/: test_circular_buffer.cpp  test_core.cpp  test_tensor_segment.cpp
docs/: conf.py  index.md
docs/_static/badges/: logo.json
docs/advanced/: cicd.md  dev-containers.md
docs/api/: index.md  settings.md
docs/cli/: fast_context_queue.md  index.md  run.md
docs/development/: git-workflow.md  tests.md
docs/management/: init.md  release.md  settings.md  update.md
reports/: index.html
reports/coverage/: index.html
reports/mypy/: index.html
reports/mypy/html/cmake/hooks/: hook_rewrite_url.py.html
reports/mypy/html/src/videodataset/: __init__.py.html
reports/mypy/html/src/videodataset/dataset/: __init__.py.html  base_dataset.py.html
reports/mypy/html/tests/: conftest.py.html  test_decoder.py.html  test_mixin.py.html  test_pkg.py.html
src/fast_context_queue/: __init__.py  _core.pyi  cli.py  context.py  queue.py  settings.py
tests/: cli_test.py  fast_queue_test.py  pkg_test.py  queue_profile_test.py  settings.py  settings_test.py  subprocess_queue_test.py
