[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.9.0",
    "setuptools-scm==8.3.1",
]

[project]
name = "fast-context-queue"
description = "Fast Context Queue is a fast alternative to Python's multiprocessing.Queue."
readme = "README.md"
keywords = [
    "fast context queue",
    "serious-scaffold",
]
license = { text = "MIT" }
authors = [
    { email = "genie@agibot.com", name = "genie" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=8.2.0",
    "pydantic-settings>=2.7.1",
]
urls.documentation = "https://ai-platform.code.agibot.com/fast-context-queue"
urls.issue = "https://code.agibot.com/ai-platform/fast-context-queue/-/issues"
urls.repository = "https://code.agibot.com/ai-platform/fast-context-queue"
scripts.fast-context-queue-cli = "fast_context_queue.cli:cli"

[dependency-groups]
test = [
    "coverage>=7.6.10",
    "pytest>=8.3.4",
]
doc = [
    "autodoc-pydantic>=2.2.0",
    "coverage>=7.6.10",
    "furo>=2024.8.6",
    "mypy[reports]>=1.14.1",
    "myst-parser>=3.0.1",
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
    "sphinx-click>=6.0.0",
    "sphinx-design>=0.6.1",
]
lint = [
    "mypy>=1.14.1",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
src = [
    "src",
]
fix = true
lint.select = [
    "B",      # flake8-bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle error
    "F",      # Pyflakes
    "I",      # isort
    "RUF100", # Unused noqa directive
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
]
lint.per-file-ignores."tests/*" = [
    "S101",
]
lint.pydocstyle.convention = "google"

[tool.codespell]
write-changes = true
check-filenames = true

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-l -s --durations=0"
log_cli = true
log_cli_level = "info"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
minversion = "6.0"

[tool.coverage.report]
fail_under = 70

[tool.coverage.run]
source = [
    "fast_context_queue",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
exclude = [
    "build",
    "doc",
]
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
