[build-system]
build-backend = "scikit_build_core.build"
requires = [ "conan", "mypy", "scikit-build-core" ]

[project]
name = "fast-context-queue"
description = "Fast Context Queue is a fast alternative to Python's multiprocessing.Queue."
readme = "README.md"
keywords = [
    "fast context queue",
    "serious-scaffold",
]
license = { text = "MIT" }
authors = [
    { email = "genie@agibot.com", name = "genie" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "torch",
]
urls.documentation = "https://ai-platform.code.agibot.com/fast-context-queue"
urls.issue = "https://code.agibot.com/ai-platform/fast-context-queue/-/issues"
urls.repository = "https://code.agibot.com/ai-platform/fast-context-queue"

[dependency-groups]
test = [
    "coverage>=7.6.10",
    "lerobot==0.4.1",
    "pytest>=8.3.4",
]
doc = [
    "autodoc-pydantic>=2.2.0",
    "coverage>=7.6.10",
    "furo>=2024.8.6",
    "mypy[reports]>=1.14.1",
    "myst-parser>=3.0.1",
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
    "sphinx-click>=6.0.0",
    "sphinx-design>=0.6.1",
]
lint = [
    "mypy>=1.14.1",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/{wheel_tag}"
cmake.verbose = false
logging.level = "DEBUG"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = [ "src/fast_context_queue" ]
sdist.include = [
    "src/fast_context_queue/_queue_core.pyi",
    "cmake",
]

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"
CMAKE_BUILD_TYPE = "Release"
CONAN_INSTALL_ARGS = "--build=missing;-c tools.build:skip_test=true"

[tool.cibuildwheel]
build-verbosity = 1
skip = [ "*win*" ]
test-command = "pytest {project}/tests"
test-extras = [ "test" ]
test-skip = [ "*-win*", "*-macosx*", "*-manylinux*" ]

[tool.ruff]
src = [
    "src",
]
fix = true
lint.select = [
    "B",      # flake8-bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle error
    "F",      # Pyflakes
    "I",      # isort
    "RUF100", # Unused noqa directive
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
]
lint.per-file-ignores."tests/*" = [
    "S101",
]
lint.pydocstyle.convention = "google"

[tool.codespell]
write-changes = true
check-filenames = true

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-l -s --durations=0"
log_cli = true
log_cli_level = "info"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
minversion = "6.0"

[tool.coverage.report]
fail_under = 70

[tool.coverage.run]
source = [
    "fast_context_queue",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
exclude = [
    "build",
    "doc",
    "conanfile.py",
    "cmake",
]
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
